kubernetes/signalk-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: signalk
  name: signalk
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: signalk
  sessionAffinity: None
  type: LoadBalancer

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2019-06-28T17:50:07Z
  generation: 1
  labels:
    app: signalk
  name: signalk
  namespace: default
  resourceVersion: "228897"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/signalk
  uid: 2aad4b9c-99cd-11e9-a760-42010a80002e
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: signalk
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: signalk
    spec:
      containers:
      - image: gcr.io/wouterdebie-personal/signalk
        imagePullPolicy: Always
        name: signalk
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/.signalk
          name: home-node-dotsignalk
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: home-node-dotsignalk
        persistentVolumeClaim:
          claimName: signalkpvc
