kubernetes/signalk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalk
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signalk
            port:
              number: 3000
